--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -2010,17 +2010,25 @@
     }
    ],
    "source": [
-    "cat_col_info_df = df.select_dtypes(include='object')\n",
+    "cat_col_info_df = weather_df.select_dtypes(exclude=[np.number])\n",
     "\n",
-    "def missing_ratio(x):\n",
-    "    missing_ratio = x.isnull().sum()/len(x)\n",
-    "    return missing_ratio\n",
-    "    \n",
-    "def num_values(x):\n",
-    "    result = x.value_counts().to_dict()\n",
-    "    return result\n",
+    "def missing_ratio(column):\n",
+    "    return ((column.isnull().sum() / column.shape[0]) * 100).round(1)\n",
     "\n",
-    "cat_col_info_df = cat_col_info_df.agg([missing_ratio, num_values])\n",
+    "# Hàm tính số lượng giá trị\n",
+    "def num_values(column):\n",
+    "    return column.nunique()\n",
+    "\n",
+    "# Hàm tính tỷ lệ của từng giá trị\n",
+    "def value_ratios(column):\n",
+    "    value_counts = column.value_counts() #Đếm số lượng của mỗi loại value trong 1 cột\n",
+    "    non_missing_count = value_counts.sum() #Tổng số lượng của tất cả value trong 1 cột\n",
+    "    ratios = (value_counts / non_missing_count * 100).round(1) #Lưu tỉ lệ vào Series\n",
+    "    ratios_dict = ratios.to_dict()\n",
+    "    sorted_ratios_dict = dict(sorted(ratios_dict.items(), key=lambda item: item[1], reverse=True))\n",
+    "    return sorted_ratios_dict\n",
+    "\n",
+    "cat_col_info_df = cat_col_info_df.agg([missing_ratio, num_values, value_ratios])\n",
     "cat_col_info_df"
    ]
   },
