add .gitignore delete orphaned file fix ValueError closes #9.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import os "
+    "import os"
    ]
   },
   {
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "9e791350-60ba-4b68-b185-1a329ad633c3",
    "metadata": {},
    "outputs": [],
@@ -1408,6 +1408,9 @@
     "\n",
     "# Replace ',' into '.' in 'Years of experience' column\n",
     "df['Years of experience'] = df['Years of experience'].replace(\",\", \".\", regex = True)\n",
+    "\n",
+    "# Drop row whose Years of experience value is out of format\n",
+    "df = df[df['Years of experience'].str.contains('\\d{1,2}\\.?\\d{,2}$', regex=True)]\n",
     "\n",
     "# Change to numeric type\n",
     "df['Years of experience'] = df['Years of experience'].astype(float)"
@@ -1443,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "62157c6a-c454-4ee7-936f-8d3b1edb8d09",
    "metadata": {},
    "outputs": [
@@ -1531,7 +1534,7 @@
        "max             2020.0  66.0                 40.0     500000000.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1565,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "f32fa428",
    "metadata": {},
    "outputs": [],
@@ -1575,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "20bf23dc-d978-4906-9cf8-8369fab392ca",
    "metadata": {},
    "outputs": [
@@ -1663,7 +1666,7 @@
        "max             2020.0  66.0                 40.0        850000.0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1684,7 +1687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "79156ae3-5cff-4cd1-9fce-00c1d14e8340",
    "metadata": {},
    "outputs": [],
@@ -1694,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "ba3cefe9-cccb-49de-a375-25a6cb444080",
    "metadata": {},
    "outputs": [
@@ -1782,7 +1785,7 @@
        "max             2020.0  66.0                 40.0        300000.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1795,7 +1798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "1dab958d-db4b-4497-8d24-9d123bf52a33",
    "metadata": {},
    "outputs": [
@@ -1863,7 +1866,7 @@
        "2267      Startup  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1882,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "1859e6d7-9950-4141-91ed-b02d27064a94",
    "metadata": {},
    "outputs": [],
@@ -1917,7 +1920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "7eedee38-9644-4af5-b010-7ac6b1f0ff6c",
    "metadata": {},
    "outputs": [
@@ -2023,7 +2026,7 @@
        "value_ratios   {'Product': 62.7, 'Startup': 19.8, 'Consulting...  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2069,7 +2072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "69886977-22b0-46ae-baf4-1f821f1a8b8a",
    "metadata": {},
    "outputs": [],
@@ -2094,7 +2097,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
