--- a/notebooks/make-and-answer-question-1-2.ipynb
+++ b/notebooks/make-and-answer-question-1-2.ipynb
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,12 +364,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After visualize, i see:\n",
-    "- Senior level: Most salaries range from 70,000 to 80,000 per year, the highest is about 200,000 USD per year and the lowest is about 15,000 USD per year\n",
-    "- Middle level: Most salaries range from 50,000 to 65,000 per year, the highest is about 150,000 USD per year and the lowest is about 10,000 USD per year\n",
-    "- Junior level: Most salaries range from 50,000 to 65,000 per year, the highest is about 110,000 USD per year and the lowest is about 8,000 USD per year\n",
-    "- Head level: Most salaries range from 85,000 to 100,000 per year, the highest is about 180,000 USD per year and the lowest is about 25,000 USD per year\n",
-    "- Lead level: Most salaries range from 75,000 to 100,000 per year, the highest is about 150,000 USD per year and the lowest is about 23,000 USD per year"
+    "### Insight:\n",
+    "- Senior position have so many outliner (high direction). That means that not only are there average salaries, there are also many other high salaries that a senior can achieve.\n",
+    "- There are a few positions that appear very rarely, sometimes only once.\n",
+    "- Head and lead postion salaries fluctuate the most."
    ]
   },
   {
@@ -394,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -463,11 +461,23 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Insight:\n",
+    "- Data-related positions have very, very high salaries.\n",
+    "- positions related to leader or head higher than 120,000$ per year.\n",
+    "- The remaining positions range from $20,000 to $80,000 per year.\n",
+    "\n",
+    "=> The future salary of these industries will increase due to the growing big data."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -485,5 +495,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
