specify region the data originated from

--- a/notebooks/data-collecting.ipynb
+++ b/notebooks/data-collecting.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Topic: Analyzing about programmer salaries in the years 2018-2020"
+    "# Topic: Analyzing about programmer salaries in EU in the years 2018-2020"
    ]
   },
   {
