--- a/notebooks/reflection.ipynb
+++ b/notebooks/reflection.ipynb
@@ -40,7 +40,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- Working with data related deeply to our career is truly a journey inside our mind and it's hard.\n",
+    "- At first, we thought it's a easy task to make questions as we had already been very curious, but those question turned out to be too easy. So, we learned more, to be more curious as curiousity lead to questions.\n",
+    "-  What GitHub does best is explicitly showing conflict, which is the main drawback of collaborating on code. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -51,10 +55,24 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
