Update full reflection

--- a/notebooks/reflection.ipynb
+++ b/notebooks/reflection.ipynb
@@ -50,7 +50,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lê Đức Cường - "
+    "## Lê Đức Cường - 21120213"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Teamwork and Task Allocation in Project Implementation: Working with Multiple Dataframes, Synchronization, and Creating a Comprehensive Dataframe.     \n",
+    "- Learning how to Explain Data using Markdown and dealing with Numerous Noisy Values in the Data Collection Process.     \n",
+    "- Understanding methods to handle a multitude of noisy values that may arise during the data collection process."
    ]
   }
  ],
