add fill nan value in categorical column and some change in markdown

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "id": "0b4607ec-0080-4528-b329-1594036665e9",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
    "id": "fa3dd64c-5e05-45ec-bb24-ae6f7c7d6e87",
    "metadata": {},
    "source": [
-    "# Firstly, preprocessing"
+    "# Firstly, preprocessing in each CSV file"
    ]
   },
   {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "id": "1c8cb8d3",
    "metadata": {},
    "outputs": [
@@ -309,7 +309,7 @@
        "[725 rows x 11 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "id": "21f947b5",
    "metadata": {},
    "outputs": [
@@ -602,7 +602,7 @@
        "[974 rows x 11 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "id": "8c2b0888",
    "metadata": {},
    "outputs": [
@@ -894,7 +894,7 @@
        "[1233 rows x 11 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "id": "ad0e569e",
    "metadata": {},
    "outputs": [],
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "id": "693208f2-8e04-4ac3-95b3-52d9887a9721",
    "metadata": {},
    "outputs": [
@@ -1211,7 +1211,7 @@
        "[2932 rows x 11 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "id": "ef40a757-327d-475f-bc99-9a5cd7e22485",
    "metadata": {},
    "outputs": [
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "id": "d0ed5420-b711-4a6b-a66c-539e6769569a",
    "metadata": {},
    "outputs": [
@@ -1288,7 +1288,7 @@
        "39"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1308,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "id": "19f6380b-3898-4380-bb5f-e1a462a09fc5",
    "metadata": {},
    "outputs": [],
@@ -1352,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
    "id": "bf3c31bc",
    "metadata": {},
    "outputs": [
@@ -1373,7 +1373,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 54,
    "id": "9e791350-60ba-4b68-b185-1a329ad633c3",
    "metadata": {},
    "outputs": [],
@@ -1446,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "id": "62157c6a-c454-4ee7-936f-8d3b1edb8d09",
    "metadata": {},
    "outputs": [
@@ -1534,7 +1534,7 @@
        "max             2020.0  66.0                 40.0     500000000.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1568,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 56,
    "id": "f32fa428",
    "metadata": {},
    "outputs": [],
@@ -1578,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 57,
    "id": "20bf23dc-d978-4906-9cf8-8369fab392ca",
    "metadata": {},
    "outputs": [
@@ -1666,7 +1666,7 @@
        "max             2020.0  66.0                 40.0        850000.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1687,7 +1687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 58,
    "id": "79156ae3-5cff-4cd1-9fce-00c1d14e8340",
    "metadata": {},
    "outputs": [],
@@ -1697,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 59,
    "id": "ba3cefe9-cccb-49de-a375-25a6cb444080",
    "metadata": {},
    "outputs": [
@@ -1785,7 +1785,7 @@
        "max             2020.0  66.0                 40.0        300000.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1794,85 +1794,6 @@
     "num_col_info_df = pd.DataFrame(df.select_dtypes(include=[np.number]))\n",
     "num_col_info_df = num_col_info_df.agg([ missing_ratio,\"min\",lower_quartile, median,upper_quartile,\"max\"])\n",
     "num_col_info_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "1dab958d-db4b-4497-8d24-9d123bf52a33",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>City</th>\n",
-       "      <th>Position</th>\n",
-       "      <th>Years of experience</th>\n",
-       "      <th>Current level</th>\n",
-       "      <th>Current Salary</th>\n",
-       "      <th>Main language at work</th>\n",
-       "      <th>Company size</th>\n",
-       "      <th>Company type</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2267</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Munich</td>\n",
-       "      <td>Data Scientist</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Junior</td>\n",
-       "      <td>300000.0</td>\n",
-       "      <td>English</td>\n",
-       "      <td>101-1000</td>\n",
-       "      <td>Startup</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Year   Age Gender    City        Position  Years of experience  \\\n",
-       "2267  2020  24.0   Male  Munich  Data Scientist                  1.0   \n",
-       "\n",
-       "     Current level  Current Salary Main language at work Company size  \\\n",
-       "2267        Junior        300000.0               English     101-1000   \n",
-       "\n",
-       "     Company type  \n",
-       "2267      Startup  "
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[df['Current Salary'] == 300000]"
    ]
   },
   {
@@ -1885,7 +1806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 61,
    "id": "1859e6d7-9950-4141-91ed-b02d27064a94",
    "metadata": {},
    "outputs": [],
@@ -1915,12 +1836,12 @@
     "\n",
     "You will save the results to DataFrame `cat_col_info_df`, where:\n",
     "- The names of the columns are the names of the non-numeric columns in `df`.\n",
-    "- The names of the lines are: \"missing_ratio\", \"num_values\"."
+    "- The names of the lines are: \"missing_ratio\", \"num_values\", \"value_ratios\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 62,
    "id": "7eedee38-9644-4af5-b010-7ac6b1f0ff6c",
    "metadata": {},
    "outputs": [
@@ -2026,7 +1947,7 @@
        "value_ratios   {'Product': 62.7, 'Startup': 19.8, 'Consulting...  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2059,7 +1980,20 @@
    "id": "3ac75032-2df7-4f20-b476-4ed646971983",
    "metadata": {},
    "source": [
-    "After observe, we didn't see anything abnormal"
+    "After observe, there are several lines with null data. So we fixed below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "30cf116d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['City'].fillna(df['City'].mode()[0], inplace=True)\n",
+    "df['Main language at work'].fillna(df['Main language at work'].mode()[0], inplace=True)\n",
+    "df['Company size'].fillna(df['Company size'].mode()[0], inplace=True)\n",
+    "df['Company type'].fillna(df['Company type'].mode()[0], inplace=True)"
    ]
   },
   {
@@ -2072,7 +2006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 64,
    "id": "69886977-22b0-46ae-baf4-1f821f1a8b8a",
    "metadata": {},
    "outputs": [],
