update HN's reflection

--- a/notebooks/reflection.ipynb
+++ b/notebooks/reflection.ipynb
@@ -26,7 +26,8 @@
    "metadata": {},
    "source": [
     "- Know about a specific process of preprocessing in data science.\n",
-    "- Know how many noisy values there will be during the data collection process.\n",
+    "- Know how much noisy data there is in a small set of data collected through a form? Large data sets will have to be much more difficult to preprocess and must be accurate.\n",
+    "- The best ways to fill null values\n",
     "- Know how to use Git and Github as well as teamwork on this platform."
    ]
   },
@@ -60,6 +61,22 @@
     "- Teamwork and Task Allocation in Project Implementation: Working with Multiple Dataframes, Synchronization, and Creating a Comprehensive Dataframe.     \n",
     "- Learning how to Explain Data using Markdown and dealing with Numerous Noisy Values in the Data Collection Process.     \n",
     "- Understanding methods to handle a multitude of noisy values that may arise during the data collection process."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# If we had more time, what would we do?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Find another larger dataset with more year values.\n",
+    "- Make a question about future salary and use machine learning to predict the salary at any time.\n",
+    "- Deploy it into practice.\n"
    ]
   }
  ],
