small change in markdown

--- a/notebooks/Make-and-answer-questions.ipynb
+++ b/notebooks/Make-and-answer-questions.ipynb
@@ -615,7 +615,7 @@
     "- Know the positions with the highest salary and if young generation do not have much orientation in the IT field, they can consider these positions.\n",
     "- In contrast to the highest salary position, if the younger generation does not have a direction, they can consider other positions for higher salaries.\n",
     "### Answering\n",
-    "    Using bar plot to visualize the distribution of salaries of each level below:"
+    "    Using bar plot to visualize  the highest and lowest of salaries of each level below:"
    ]
   },
   {
