--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 67,
    "id": "0b4607ec-0080-4528-b329-1594036665e9",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
     "Our data have 3 csv files: \"IT Salary Survey EU 2018.csv\", \"IT Salary Survey EU 2019.csv\", \"IT Salary Survey EU 2020.csv\".\n",
     "Our plain in preprocessing will be like this:\n",
     "- Firstly, preprocessing in each csv file and let all of them have the same properties.\n",
-    "- Secondly, combine three dataframes into one and create a new file with the title \"IT Salary 2018_2019_2020.csv\".\n",
+    "- Secondly, combine three dataframes into one and create a new file with the title 'IT Salary 2018_2019_2020.csv'.\n",
     "- Finally, Explore data and preprocessing it."
    ]
   },
@@ -49,7 +49,7 @@
    "id": "fa3dd64c-5e05-45ec-bb24-ae6f7c7d6e87",
    "metadata": {},
    "source": [
-    "# Firstly, preprocessing"
+    "# Firstly, preprocessing in each CSV file"
    ]
   },
   {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 68,
    "id": "1c8cb8d3",
    "metadata": {},
    "outputs": [
@@ -309,7 +309,7 @@
        "[725 rows x 11 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,17 +351,17 @@
    "id": "f45b7cdf-cf9d-42f8-8387-3dc00d2c598e",
    "metadata": {},
    "source": [
-    "## Preprocessing in \"IT Salary Survey EU 2019.csv\"\n",
+    "## Preprocessing \"IT Salary Survey EU 2019.csv\"\n",
     "Some work we will do:\n",
     "- Drop unnecessary columns.\n",
     "- Rename the column based on the original rules.\n",
-    "- Fill null values.\n",
+    "- Fill nan values.\n",
     "- Change the order of columns to the original rules."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 69,
    "id": "21f947b5",
    "metadata": {},
    "outputs": [
@@ -602,7 +602,7 @@
        "[974 rows x 11 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,17 +643,17 @@
    "id": "b45818c2-19f9-4b87-8ba7-50194f6f613f",
    "metadata": {},
    "source": [
-    "## Preprocessing in \"IT Salary Survey EU 2020.csv\"\n",
+    "## Preprocessing \"IT Salary Survey EU 2020.csv\"\n",
     "Some work we will do:\n",
     "- Drop unnecessary columns.\n",
     "- Rename the column based on the original rules.\n",
-    "- Fill null values.\n",
+    "- Fill nan values.\n",
     "- Change the order of columns to the original rules."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 70,
    "id": "8c2b0888",
    "metadata": {},
    "outputs": [
@@ -894,7 +894,7 @@
        "[1233 rows x 11 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 71,
    "id": "ad0e569e",
    "metadata": {},
    "outputs": [],
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 72,
    "id": "693208f2-8e04-4ac3-95b3-52d9887a9721",
    "metadata": {},
    "outputs": [
@@ -1211,7 +1211,7 @@
        "[2932 rows x 11 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 73,
    "id": "ef40a757-327d-475f-bc99-9a5cd7e22485",
    "metadata": {},
    "outputs": [
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 74,
    "id": "d0ed5420-b711-4a6b-a66c-539e6769569a",
    "metadata": {},
    "outputs": [
@@ -1288,13 +1288,13 @@
        "39"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "num_duplicated_rows = len(df)-len(df.drop_duplicates())\n",
+    "num_duplicated_rows = len(df) - len(df.drop_duplicates())\n",
     "num_duplicated_rows"
    ]
   },
@@ -1308,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 75,
    "id": "19f6380b-3898-4380-bb5f-e1a462a09fc5",
    "metadata": {},
    "outputs": [],
@@ -1331,13 +1331,13 @@
    "source": [
     "We will explain the meaning of each column here:\n",
     "- Year: The year this person had this salary.\n",
-    "- Age: Age when this person has this salary.\n",
+    "- Age: Age when this person has this salary. \n",
     "- Gender: Gender of this person (Female or Male).\n",
     "- Position: Position of this person in company such as Developer, Manager, CTO,...\n",
     "- Years of experience: The number of years this person has worked in IT industry.\n",
     "- Current level: This person's current level in the company such as (Intern, Fresher, Junior, Senior,...).\n",
-    "- Current Salary: This person' current salary.\n",
-    "- Main language at work: The main language this person use at work.\n",
+    "- Current Salary: The current salary of this person.\n",
+    "- Main language at work: main language this person use at work.\n",
     "- Company size: The number of emloyees in his/her company.\n",
     "- Company type: Type of company such as Product, Startup,..."
    ]
@@ -1352,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 76,
    "id": "bf3c31bc",
    "metadata": {},
    "outputs": [
@@ -1373,7 +1373,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1393,28 +1393,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 77,
    "id": "9e791350-60ba-4b68-b185-1a329ad633c3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Delete noise row\n",
+    "# Delete noise rows\n",
     "year_delete = ['less than year', '383',\"1 (as QA Engineer) / 11 in total\",\"6 (not as a data scientist. but as a lab scientist)\",\"15. thereof 8 as CTO\", '15. thereof 8 as CTO']\n",
     "for value in year_delete:\n",
     "    df = df.drop(df[df['Years of experience'] == value].index)\n",
     "\n",
-    "# Delete row have nan value\n",
+    "# Delete rows have nan value\n",
     "df = df.dropna(subset = ['Years of experience'])\n",
     "\n",
     "# Replace ',' into '.' in 'Years of experience' column\n",
     "df['Years of experience'] = df['Years of experience'].replace(\",\", \".\", regex = True)\n",
     "\n",
-<<<<<<< Updated upstream
-=======
     "# Drop row whose Years of experience value is out of format\n",
-    "df = df[df['Years of experience'].str.contains('\\d{1,2}\\.?\\d{,2}$', regex = True)]\n",
+    "df = df[df['Years of experience'].str.contains('\\d{1,2}\\.?\\d{,2}$', regex=True)]\n",
     "\n",
->>>>>>> Stashed changes
     "# Change to numeric type\n",
     "df['Years of experience'] = df['Years of experience'].astype(float)"
    ]
@@ -1425,7 +1422,7 @@
    "metadata": {},
    "source": [
     "### With each numerical column how are values distributed?\n",
-    "- What is the percentage of missing values?\n",
+    "- What is the percentage of missing values?      \n",
     "- Min? Max? Median? Are they abnormal?"
    ]
   },
@@ -1449,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 78,
    "id": "62157c6a-c454-4ee7-936f-8d3b1edb8d09",
    "metadata": {},
    "outputs": [
@@ -1537,7 +1534,7 @@
        "max             2020.0  66.0                 40.0     500000000.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1571,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 79,
    "id": "f32fa428",
    "metadata": {},
    "outputs": [],
@@ -1581,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 80,
    "id": "20bf23dc-d978-4906-9cf8-8369fab392ca",
    "metadata": {},
    "outputs": [
@@ -1669,13 +1666,13 @@
        "max             2020.0  66.0                 40.0        850000.0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "num_col_info_df = pd.DataFrame(df.select_dtypes(include = [np.number]))\n",
+    "num_col_info_df = pd.DataFrame(df.select_dtypes(include=[np.number]))\n",
     "num_col_info_df = num_col_info_df.agg([ missing_ratio,\"min\",lower_quartile, median,upper_quartile,\"max\"])\n",
     "num_col_info_df"
    ]
@@ -1690,7 +1687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 81,
    "id": "79156ae3-5cff-4cd1-9fce-00c1d14e8340",
    "metadata": {},
    "outputs": [],
@@ -1700,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 82,
    "id": "ba3cefe9-cccb-49de-a375-25a6cb444080",
    "metadata": {},
    "outputs": [
@@ -1788,7 +1785,7 @@
        "max             2020.0  66.0                 40.0        300000.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1801,8 +1798,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "1dab958d-db4b-4497-8d24-9d123bf52a33",
+   "execution_count": 83,
+   "id": "407ed9d7",
    "metadata": {},
    "outputs": [
     {
@@ -1869,7 +1866,7 @@
        "2267      Startup  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1883,12 +1880,12 @@
    "id": "b1d94255-425e-4875-9be2-436a8fe09bba",
    "metadata": {},
    "source": [
-    "After rechecking, I see max salary is 300000 USD per year come from a person with a junior level and a startup company. Thus, i think it is abnormal so I delete it"
+    "After rechecking, I see max salary is 300000 USD per year come from a person with a junior level, only has one year of experience and a startup company. Thus, i think it is abnormal so I delete it"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 84,
    "id": "1859e6d7-9950-4141-91ed-b02d27064a94",
    "metadata": {},
    "outputs": [],
@@ -1918,12 +1915,12 @@
     "\n",
     "You will save the results to DataFrame `cat_col_info_df`, where:\n",
     "- The names of the columns are the names of the non-numeric columns in `df`.\n",
-    "- The names of the lines are: \"missing_ratio\", \"num_values\"."
+    "- The names of the lines are: \"missing_ratio\", \"num_values\", \"value_ratios\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 85,
    "id": "7eedee38-9644-4af5-b010-7ac6b1f0ff6c",
    "metadata": {},
    "outputs": [
@@ -2029,7 +2026,7 @@
        "value_ratios   {'Product': 62.7, 'Startup': 19.8, 'Consulting...  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2050,7 +2047,7 @@
     "    non_missing_count = value_counts.sum() #Tổng số lượng của tất cả value trong 1 cột\n",
     "    ratios = (value_counts / non_missing_count * 100).round(1) #Lưu tỉ lệ vào Series\n",
     "    ratios_dict = ratios.to_dict()\n",
-    "    sorted_ratios_dict = dict(sorted(ratios_dict.items(), key=lambda item: item[1], reverse=True))\n",
+    "    sorted_ratios_dict = dict(sorted(ratios_dict.items(), key = lambda item: item[1], reverse = True))\n",
     "    return sorted_ratios_dict\n",
     "\n",
     "cat_col_info_df = cat_col_info_df.agg([missing_ratio, num_values, value_ratios])\n",
@@ -2062,9 +2059,6 @@
    "id": "3ac75032-2df7-4f20-b476-4ed646971983",
    "metadata": {},
    "source": [
-<<<<<<< Updated upstream
-    "After observe, we didn't see anything abnormal"
-=======
     "After observe, there are several lines with null data. So we fixed below."
    ]
   },
@@ -2075,11 +2069,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['City'].fillna(df['City'].mode()[0], inplace = True)\n",
+    "df['City'].fillna(df['City'].mode()[0], inplace=True)\n",
     "df['Main language at work'].fillna(df['Main language at work'].mode()[0], inplace = True)\n",
     "df['Company size'].fillna(df['Company size'].mode()[0], inplace = True)\n",
     "df['Company type'].fillna(df['Company type'].mode()[0], inplace = True)"
->>>>>>> Stashed changes
    ]
   },
   {
@@ -2092,7 +2085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 87,
    "id": "69886977-22b0-46ae-baf4-1f821f1a8b8a",
    "metadata": {},
    "outputs": [],
@@ -2117,7 +2110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
